# purikura-demo

./: .gitignore  README.md  pyproject.toml
docs/: purikura-research-result.md
src/purikura_demo/: __init__.py  app.py  processing.py
src/purikura_demo/static/: camera.js  styles.css
src/purikura_demo/templates/: _error.html  _result.html  index.html
tests/: test_app.py  test_processing.py
