[project]
name = "purikura-demo"
version = "0.1.0"
description = "FastAPI + htmx app for turning still images into purikura-style portraits."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.4",
    "mediapipe>=0.10.14,<0.11",
    "numpy>=1.26.0,<2.0",
    "opencv-contrib-python>=4.10.0.84,<4.12",
    "opencv-python-headless>=4.10.0.84,<4.12",
    "pillow>=10.4.0",
    "python-multipart>=0.0.9",
    "torch>=2.3.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
